--- a/latihan/latihan3/L3b253040048.css
+++ b/latihan/latihan3/L3b253040048.css
@@ -8,6 +8,7 @@ h1 {
   font-family: Comic Sans Ms;
   font-size: 60px;
   color: darkblue;
+  text-align: center;
 }
 h4 {
   text-align: right;
@@ -15,4 +16,17 @@ h4 {
 }
 body {
   text-align: justify;
+}
+h2 {
+  font-family: "Georgia";
+}
+.by {
+  color: aliceblue;
+}
+.Warna {
+  color: coral;
+  text-align: center;
+}
+p {
+  text-align: center;
 }
